--- a/package.json
+++ b/package.json
@@ -15,14 +15,20 @@
     "@coinbase/wallet-sdk": "^3.0.4",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
-    "@ethersproject/abi": "^5.7.0",
-    "@ethersproject/bignumber": "^5.7.0",
-    "@ethersproject/experimental": "^5.7.0",
-    "@ethersproject/providers": "^5.7.2",
-    "@ethersproject/units": "^5.7.0",
-    "@metamask/eth-sig-util": "^5.0.2",
+    "@near-wallet-selector/core": "^7.0.0",
+    "@near-wallet-selector/ledger": "^7.0.0",
+    "@near-wallet-selector/math-wallet": "^7.0.0",
+    "@near-wallet-selector/meteor-wallet": "^7.0.0",
+    "@near-wallet-selector/modal-ui": "^7.0.0",
+    "@near-wallet-selector/my-near-wallet": "^7.0.0",
+    "@near-wallet-selector/near-wallet": "^7.0.0",
+    "@near-wallet-selector/nightly": "^7.0.0",
+    "@near-wallet-selector/nightly-connect": "^7.0.0",
+    "@near-wallet-selector/sender": "^7.0.0",
+    "@near-wallet-selector/wallet-connect": "^7.0.0",
     "@next/font": "^13.1.1",
     "@prisma/client": "^4.8.1",
+    "@reduxjs/toolkit": "^1.9.1",
     "@tanstack/react-query": "^4.22.0",
     "@trpc/client": "^10.9.0",
     "@trpc/next": "^10.9.0",
@@ -30,17 +36,6 @@
     "@trpc/server": "^10.9.0",
     "@types/jsonwebtoken": "^9.0.0",
     "@uploadcare/react-widget": "^2.4.1",
-    "@walletconnect/ethereum-provider": "^1.7.8",
-    "@web3-react/coinbase-wallet": "8.0.34-beta.0",
-    "@web3-react/core": "8.0.35-beta.0",
-    "@web3-react/eip1193": "8.0.26-beta.0",
-    "@web3-react/empty": "8.0.20-beta.0",
-    "@web3-react/gnosis-safe": "8.0.7-beta.0",
-    "@web3-react/metamask": "8.0.28-beta.0",
-    "@web3-react/network": "8.0.27-beta.0",
-    "@web3-react/types": "8.0.20-beta.0",
-    "@web3-react/url": "8.0.25-beta.0",
-    "@web3-react/walletconnect": "8.0.36-beta.0",
     "chakra-paginator": "^0.7.3",
     "chakra-react-select": "^4.4.3",
     "classnames": "^2.3.2",
@@ -50,11 +45,13 @@
     "iron-session": "^6.3.1",
     "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
+    "near-api-js": "^1.1.0",
     "next": "13.1.1",
     "rc-pagination": "^3.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "react-redux": "^8.0.5",
     "react-scripts": "3.4.3",
     "superjson": "1.9.1",
     "zod": "^3.20.2",
