--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "moment": "^2.29.4",
     "near-api-js": "^1.1.0",
     "next": "13.1.1",
+    "nextjs-progressbar": "^0.0.16",
     "rc-pagination": "^3.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
