--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-redux": "^8.0.5",
     "react-scripts": "3.4.3",
     "superjson": "1.9.1",
+    "ts-node": "^10.9.1",
     "zod": "^3.20.2",
     "zod-formik-adapter": "^1.2.0"
   },
@@ -73,5 +74,8 @@
     "eslint-config-next": "13.1.1",
     "prisma": "^4.8.1",
     "typescript": "^4.9.4"
+  },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   }
 }
