--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-paginate-chakra-ui": "^0.1.2",
     "react-redux": "^8.0.5",
     "react-scripts": "3.4.3",
+    "sharp": "^0.31.3",
     "slugify": "^1.6.5",
     "superjson": "1.9.1",
     "ts-node": "^10.9.1",
